--- a/static-assets/css/main.css
+++ b/static-assets/css/main.css
@@ -1609,7 +1609,9 @@ button,
   width: calc(100% + 3em); }
   .features .feature-container {
     width: calc(50% - 3em);
-    margin: 0 0 3em 3em; }
+    margin: 0 0 3em 0; }
+    .features .feature-container:nth-last-child(1), .features .feature-container:nth-last-child(2) {
+      margin-bottom: 0; }
   .features .feature {
     -moz-align-items: center;
     -webkit-align-items: center;
